--- a/Slides.Rmd
+++ b/Slides.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Bikeshare in LA, NYC and Philly"
+title: "Bikeshare in LA, NYC, Philly and Boston"
 subtitle: "Bikesharing"
 author: "Rachel, Ryan, Ina and Gorish"
 institute: "Marymount"
@@ -140,12 +140,14 @@ ggplot(philly_trips) + geom_histogram(aes(duration, binwidth=4), fill="blue", al
 ---
 
 Boston Data
-``` {r boston_dataframe, message=FALSE}
+``` {r load-data, message=FALSE, warning=FALSE}
 #testing
 summary(boston_data)
 
 ```
 ---
+
+
 
 
 
